--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.33.0",
-    "jest": "^29.4.1"
+    "jest": "^29.4.1",
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
